--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,37 +36,51 @@
         let container, camera, scene, renderer, model;
 
         function init() {
+            // Set up the scene
             container = document.getElementById('ar-container');
             scene = new THREE.Scene();
+
+            // Set up the camera
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
             scene.add(camera);
 
+            // Set up the renderer with WebXR support
             renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
             renderer.xr.enabled = true;
             container.appendChild(renderer.domElement);
 
-            document.body.appendChild(ARButton.createButton(renderer));
+            // Add the AR Button with permission request
+            document.body.appendChild(ARButton.createButton(renderer, {
+                requiredFeatures: ['hit-test', 'camera-access'],
+                optionalFeatures: ['dom-overlay'],
+                domOverlay: { root: document.body }
+            }));
 
+            // Load the 3D model
             const loader = new THREE.GLTFLoader();
             loader.load('source/oman-mosque.glb', (gltf) => {
                 model = gltf.scene;
-                model.scale.set(1, 1, 1);
+                model.scale.set(0.5, 0.5, 0.5); // Adjust scale
+                model.position.set(0, -1, -3); // Adjust position to be visible
                 scene.add(model);
             });
 
+            // Add lighting
             const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
             light.position.set(0.5, 1, 0.25);
             scene.add(light);
 
+            // Render loop
             renderer.setAnimationLoop(render);
         }
 
         function render() {
-            if (model) model.rotation.y += 0.01;
+            if (model) model.rotation.y += 0.005; // Slowly rotate the model
             renderer.render(scene, camera);
         }
 
+        // Initialize the AR scene
         window.addEventListener('load', init);
     </script>
 </body>
